# wikigolf

./: .env-example  .gitignore  LICENSE  Procfile  README.md  convert_page_to_csv.sh  convert_pagelinks_to_csv.sh  master_query.sql  package.json  pagelinks_schema.json  pages_schema.json  sample_query_for_breathd_first_search.sql  tsconfig.json  webpack.config.js
backend/: api.ts  index.js  index.ts  model.ts  util.ts
converter/: convert_and_upload.sh  convert_page_to_csv.sh  download-and-convert.js  from-sql.js  from-sql.test.js  load_to_bigquery.sh  upload.ts
converter/rust-converter/: .gitignore  Cargo.toml
converter/rust-converter/src/: main.rs
frontend/: AppState.ts
frontend/components/: App.tsx  LanguageSelect.tsx  Loading.tsx  PageSelector.tsx  Results.tsx  Suggestions.tsx  Wikigolf.tsx
frontend/model/: api.ts  wikipedia.ts
public/: index.html
