[package]
name = "rust-wiki-link-parser"
version = "0.1.0"
authors = ["Jesse Luoto <jesse.luoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
